# riroriro

./: .gitignore  1_GW_simulator.py  GWexporter.py  LICENSE  MANIFEST.in  README.md  README.txt  contributing.md  detectabilityfuns.py  gwexporter.py  horizondistfuns.py  inspiralfuns.py  matchingfuns.py  mergerfirstfuns.py  mergersecondfuns.py  pyproject.toml  setup.cfg  setup.py  snrcalculatorfuns.py  tests.py  tox.ini
docs/: conf.py  index.rst
docs/riroriro/: detectabilityfuns.rst  gwexporter.rst  horizondistfuns.rst  index.rst  inspiralfuns.rst  matchingfuns.rst  mergerfirstfuns.rst  mergersecondfuns.rst  snrcalculatorfuns.rst  tests.rst  whitedwarffuns.rst
licenses/: LICENSE.rst
old_examples/: 2_SNR_calculator_single_detector.py  2a_SNR_calculator_quadrature.py
paper/: paper.bib  paper.md
riroriro/: __init__.py  detectabilityfuns.py  gwexporter.py  horizondistfuns.py  inspiralfuns.py  matchingfuns.py  mergersecondfuns.py  snrcalculatorfuns.py  whitedwarffuns.py
riroriro/tests/: test_detectabilityfuns.py  test_horizondistfuns.py  test_inspiralfuns.py  test_matchingfuns.py  test_mergerfirstfuns.py  test_mergersecondfuns.py  test_snrcalculatorfuns.py  test_whitedwarffuns.py  tests_detectabilityfuns.py  tests_horizondistfuns.py  tests_inspiralfuns.py  tests_matchingfuns.py  tests_mergerfirstfuns.py  tests_mergersecondfuns.py  tests_snrcalculatorfuns.py
tests/: tests_detectabilityfuns.py  tests_horizondistfuns.py  tests_inspiralfuns.py  tests_mergersecondfuns.py  tests_snrcalculatorfuns.py
