[metadata]
name = riroriro
author = Wouter van Zeist
author_email = wvan478@aucklanduni.ac.nz
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/wvanzeist/riroriro
description = A code for simulating gravitational waves and evaluating their detectability.
long_description = file: README.md
long_description_content_type = text/x-rst
edit_on_github = False
github_project = wvanzeist/riroriro

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy
    matplotlib
    scipy
    pytest
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
riroriro = data/*

[tool:pytest]
testpaths = "riroriro" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
#addopts = --doctest-rst

[coverage:run]
omit =
    riroriro/_astropy_init*
    riroriro/conftest.py
    riroriro/*setup_package*
    riroriro/tests/*
    riroriro/*/tests/*
    riroriro/extern/*
    riroriro/version*
    */riroriro/_astropy_init*
    */riroriro/conftest.py
    */riroriro/*setup_package*
    */riroriro/tests/*
    */riroriro/*/tests/*
    */riroriro/extern/*
    */riroriro/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
